<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:blurkit="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="timerViewModel"
            type="com.example.improveyourplank_app.timer.TimerViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timer.TimerFragment">

    <Button
        android:id="@+id/stopButton"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="33dp"
        style="@style/TextButton"
        android:onClick="@{() -> timerViewModel.onStop()}"
        android:textColor="@color/secondaryColor"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/setGoalButton"
        android:layout_width="156dp"
        android:layout_height="55dp"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="33dp"
        android:text="@string/set_goal"
        android:textColor="@color/primaryColor"
        android:onClick="@{() -> timerViewModel.onSetTargetTime()}"
        style="@style/TextButton"
        android:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/targetText"
            style="@style/TextSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/target_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <TextView
            android:id="@+id/targetTime"
            style="@style/TextTimeLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="00:00"
            android:textSize="33sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/targetText" />
        <ImageView
            android:id="@+id/timerBooo"
            android:layout_width="360dp"
            android:layout_marginTop="10dp"
            android:layout_height="360dp"
            android:src="@drawable/timer_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <ImageView
            android:id="@+id/timerAnimation"
            android:layout_width="360dp"
            android:layout_marginTop="10dp"
            android:layout_height="360dp"
            android:onClick="@{() -> timerViewModel.onLaunch()}"
            android:src="@drawable/timer_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>
        <TextView
            android:id="@+id/timer"
            style="@style/TextTimeLarge"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="00:00"
            android:textColor="@color/secondaryColor"
            app:layout_constraintEnd_toEndOf="@+id/timerAnimation"
            app:layout_constraintStart_toStartOf="@+id/timerAnimation"
            app:layout_constraintBottom_toBottomOf="@+id/timerAnimation"
            app:layout_constraintTop_toTopOf="@+id/timerAnimation"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>